fixed button spacing

--- a/src/CSS/Client.css
+++ b/src/CSS/Client.css
@@ -20,6 +20,8 @@
     grid-row: 3;
     display: flex;
     flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
 
 .client-page button{
